--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="dashboard-page" id="dashboard">
-    <aside class="sidebar p-25">
+    <aside class="sidebar">
       <div class="title mb-30">
         <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37" fill="none">
         <path d="M18.5003 34.8876C17.4674 34.8876 16.419 34.6564 15.602 34.1784L7.12284 29.2914C3.66951 26.9634 3.45367 26.6089 3.45367 22.9551V14.0443C3.45367 10.3905 3.65409 10.0359 7.04576 7.73887L15.5865 2.80553C17.2053 1.86512 19.749 1.86512 21.3678 2.80553L29.8778 7.70803C33.3311 10.0359 33.547 10.3905 33.547 14.0443V22.9397C33.547 26.5934 33.3465 26.948 29.9549 29.2451L21.414 34.1784C20.5815 34.6564 19.5332 34.8876 18.5003 34.8876ZM18.5003 4.42428C17.8528 4.42428 17.2207 4.54762 16.7736 4.8097L8.29451 9.7122C5.78159 11.408 5.78159 11.408 5.78159 14.0443V22.9397C5.78159 25.5759 5.78159 25.5759 8.35617 27.318L16.7736 32.1743C17.6832 32.6984 19.3328 32.6984 20.2424 32.1743L28.7215 27.2718C31.219 25.5759 31.219 25.5759 31.219 22.9397V14.0443C31.219 11.408 31.219 11.408 28.6445 9.66595L20.227 4.8097C19.7799 4.54762 19.1478 4.42428 18.5003 4.42428Z" fill="black"/>
@@ -186,6 +186,30 @@
             <img src="assets/search.png" alt="" class="me-15">
             <input type="search" placeholder="Search">
           </div>
+        </div>
+        <div class="table-responsive">
+          <table class="pb-20">
+            <thead>
+              <tr>
+                <th>Customer Name</th>
+                <th>Company</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Country</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ahmed</td>
+                <td>ahmed</td>
+                <td>ahmed</td>
+                <td>ahmed</td>
+                <td>ahmed</td>
+                <td>ahmed</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
