--- a/index.html
+++ b/index.html
@@ -1,68 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
-    <!-- Import Poppins Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet" />
-    <!-- Main Scss file -->
-    <link rel="stylesheet" href="scss/main.css" />
-  </head>
-  <body>
-    <div class="login-page" id="login-page">
-      <section class="main-login col-lg-6 col">
-        <div class="form-container">
-          <h1 class="title">Login</h1>
-          <span class="fs-13"
-            >How to get started to
-            <span class="dash-span">Dashboard</span> ?</span
-          >
-          <form>
-            <div class="input username">
-              <img src="assets/username.png" alt="" />
-              <input name="username" type="text" placeholder="Username" />
-            </div>
-            <div class="input password">
-              <img src="assets/password.png" alt="" />
-              <input name="password" type="password" placeholder="Password" />
-            </div>
-            <div class="error-message fs-13"></div>
-            <button class="login-btn">Login Now</button>
-            <p class="others fs-14">
-              <span class="fs-16">Login</span> With Others
-            </p>
-            <button class="google-btn">
-              <img src="assets/google.png" alt="" />
-              <span class="login-text">Login with <span>google</span></span>
-            </button>
-          </form>
-        </div>
-      </section>
-      <section class="rhs">
-        <div class="rhs-container">
-          <div class="img-container">
-            <p class="fs-32">
-              very good works are waiting for you login now!!!
-            </p>
-            <div class="ellipse">
-              <img class="thunder" src="assets/thunder.png" alt="thunder" />
-            </div>
-            <img
-              loading="eager"
-              decoding="async"
-              class="woman"
-              src="assets/woman.PNG"
-              alt="woman" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <!-- Import Poppins Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- Main Scss file -->
+  <link rel="stylesheet" href="scss/main.css">
+</head>
+<body>
+  <div class="login-page" id="login-page">
+    <section class="main-login col-lg-6 col">
+      <div class="form-container">
+        <h1 class="title">Login</h1>
+        <span class="fs-13">How to get started to <span class="dash-span">Dashboard</span> ?</span>
+        <form>
+          <div class="input username">
+            <img src="assets/username.png" alt="">
+            <input name="username" type="text" placeholder="Username">
           </div>
+          <div class="input password">
+            <img src="assets/password.png" alt="">
+            <input name="password" type="password" placeholder="Password">
+          </div>
+          <div class="error-message fs-13"></div>
+          <button class="login-btn">Login Now</button>
+          <p class="others fs-14"><span class="fs-16">Login</span> With Others</p>
+          <button class="google-btn">
+            <img src="assets/google.png" alt="">
+            <span class="login-text">Login with <span>google</span></span>
+          </button>
+        </form>
+      </div>
+    </section>
+    <section class="rhs">
+      <div class="rhs-container">
+        <div class="img-container">
+          <p class="fs-32">very good works are waiting for you login now!!!</p>
+          <div class="ellipse"><img class="thunder" src="assets/thunder.png" alt="thunder"></div>
+          <img loading="eager" decoding="async" class="woman" src="assets/woman.PNG" alt="woman">
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
+  </div>
 
-    <script src="js/main.js"></script>
-  </body>
+  <script src="js/main.js"></script>
+</body>
 </html>
